# radar-riesgo-corrupcion-colombia

./: .gitignore  Makefile  PLAN.md  README.md  index.html  netlify.toml  vercel.json
pipeline/: .env.example  pyproject.toml
pipeline/src/pipeline/: config.py
pipeline/src/pipeline/clean/: build.py  enrich_rues.py  normalize.py  profile.py  rues_coverage.py
pipeline/src/pipeline/export/: build_artifacts.py  build_fixtures.py  common.py  validate.py
pipeline/src/pipeline/extract/: monitor_ciudadano.py  pull.py  rues_lookup.py  socrata.py
pipeline/src/pipeline/flags/: common.py  f01_unico_oferente.py  f02_empresa_expres.py  f03_adiciones_excesivas.py  f04_abuso_contratacion_directa.py  f05_fraccionamiento.py  f06_carrusel.py  f07_ventana_licitacion_corta.py  f08_precio_calcado.py  f09_afan_diciembre.py  f10_ventana_electoral.py  (+6 more)
pipeline/tests/: test_extraction.py  test_m2_clean.py  test_rues_enrichment.py  test_smoke.py
pipeline/tests/test_export/: test_build_artifacts.py
pipeline/tests/test_flags/: conftest.py  test_f01_unico_oferente.py  test_f02_empresa_expres.py  test_f03_adiciones_excesivas.py  test_f04_abuso_contratacion_directa.py  test_f05_fraccionamiento.py  test_f06_carrusel.py  test_f07_ventana_licitacion_corta.py  test_f08_precio_calcado.py  test_f09_afan_diciembre.py  test_f10_ventana_electoral.py  test_f11_proveedor_sancionado.py  test_f12_concentracion_dependencia.py  test_f13_objeto_vago.py  test_f14_valor_redondo.py  test_sanity_rates.py
pipeline/tests/test_score/: score_fixtures.py  test_backtest.py  test_scorer.py  test_weights.py
(+137 files in other folders)
