[project]
name = "pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "pyarrow",
    "httpx",
    "pyyaml",
    "python-dotenv",
    "tenacity",
    "openpyxl",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
